TheProject/manifests/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
  namespace: project
  labels:
    app: todo-backend
spec:
  selector:
    app: todo-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
